fix for images in the featured navigation which doesn't have a class of alignleft
git-svn-id: https://krema.svn.beanstalkapp.com/hastuzeit@178 3445ca58-e459-48c6-80b6-aacbbe7ab71b

--- a/wphastuzeit/trunk/style/css/layout.css
+++ b/wphastuzeit/trunk/style/css/layout.css
@@ -827,7 +827,7 @@ input[type=submit] {
 
 .alignleft { float:left }
 
-img.alignleft, .wp-caption.alignleft, #featured_nav img { 
+img.alignleft, .wp-caption.alignleft, .featured_nav img { 
 	margin: 5px 20px 20px 0;
 }
 
